company-service/service.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-crm-service
  namespace: default
spec:
  selector:
    app: spring-boot-crm
  ports:
    - protocol: TCP
      port: 80      # The service port that other pods use to access this service
      targetPort: 8080  # The port your Spring Boot app is listening on inside the container
  type: ClusterIP  # Only accessible inside the cluster
